# crazyflie-firmware-rmslab

./: CMakeLists.txt  Makefile  initcommit.txt
Debug/: makefile  sources.mk  subdir.mk
Debug/src/deck/api/: subdir.mk
Debug/src/deck/core/: subdir.mk
Debug/src/deck/drivers/src/: subdir.mk
Debug/src/deck/drivers/src/test/: subdir.mk
Debug/src/drivers/src/: subdir.mk
Debug/src/hal/src/: subdir.mk
Debug/src/init/: subdir.mk
Debug/src/lib/CMSIS/Core/CM3/: subdir.mk
Debug/src/lib/CMSIS/STM32F4xx/Source/: subdir.mk
Debug/src/lib/FreeRTOS/: subdir.mk
Debug/src/lib/FreeRTOS/portable/GCC/ARM_CM3/: subdir.mk
Debug/src/lib/FreeRTOS/portable/GCC/ARM_CM4F/: subdir.mk
Debug/src/lib/FreeRTOS/portable/MemMang/: subdir.mk
Debug/src/lib/STM32F10x_StdPeriph_Driver/src/: subdir.mk
Debug/src/lib/STM32F4xx_StdPeriph_Driver/src/: subdir.mk
Debug/src/lib/STM32_CPAL_Driver/devices/stm32f10x/: subdir.mk
Debug/src/lib/STM32_CPAL_Driver/devices/stm32f2xx/: subdir.mk
Debug/src/lib/STM32_CPAL_Driver/devices/stm32f4xx/: subdir.mk
Debug/src/lib/STM32_CPAL_Driver/devices/stm32l1xx/: subdir.mk
Debug/src/lib/STM32_CPAL_Driver/src/: subdir.mk
Debug/src/lib/STM32_USB_Device_Library/Core/src/: subdir.mk
Debug/src/lib/STM32_USB_OTG_Driver/src/: subdir.mk
Debug/src/modules/src/: subdir.mk
Debug/src/platform/cf1/: subdir.mk
Debug/src/platform/cf2/: subdir.mk
Debug/src/utils/src/: subdir.mk
Debug/test/utils/src/: subdir.mk
src/drivers/interface/: vl6180.h
src/drivers/src/: vl6180.c
src/hal/interface/: proximity.h
src/hal/src/: imu_cf2.c  proximity.c
src/modules/interface/: custom_hover.h  custom_pid.h
src/modules/src/: custom_hover.c  custom_pid.c  stabilizer.c
