cmake_minimum_required(VERSION 3.3)
project(cf_firmware_rms)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    bin/dep/ak8963.o.d
    bin/dep/altitude_hold.o.d
    bin/dep/attitude_pid_controller.o.d
    bin/dep/bigquad.o.d
    bin/dep/buzzdeck.o.d
    bin/dep/buzzer.o.d
    bin/dep/cfassert.o.d
    bin/dep/comm.o.d
    bin/dep/commander.o.d
    bin/dep/configblockeeprom.o.d
    bin/dep/console.o.d
    bin/dep/cpal_hal.o.d
    bin/dep/cpal_i2c.o.d
    bin/dep/cpal_i2c_hal_stm32f4xx.o.d
    bin/dep/cpal_usercallback_template.o.d
    bin/dep/cppm.o.d
    bin/dep/cppmdeck.o.d
    bin/dep/cpuid.o.d
    bin/dep/crc.o.d
    bin/dep/crtp.o.d
    bin/dep/crtpservice.o.d
    bin/dep/debug.o.d
    bin/dep/deck.o.d
    bin/dep/deck_analog.o.d
    bin/dep/deck_constants.o.d
    bin/dep/deck_digital.o.d
    bin/dep/deck_drivers.o.d
    bin/dep/deck_info.o.d
    bin/dep/deck_spi.o.d
    bin/dep/deck_test.o.d
    bin/dep/dwm1000.o.d
    bin/dep/eeprom.o.d
    bin/dep/eprintf.o.d
    bin/dep/exptest.o.d
    bin/dep/exti.o.d
    bin/dep/extrx.o.d
    bin/dep/filter.o.d
    bin/dep/FreeRTOS-openocd.o.d
    bin/dep/freeRTOSdebug.o.d
    bin/dep/gtgps.o.d
    bin/dep/heap_4.o.d
    bin/dep/i2cdev_f405.o.d
    bin/dep/imu_cf2.o.d
    bin/dep/led_f405.o.d
    bin/dep/ledring12.o.d
    bin/dep/ledseq.o.d
    bin/dep/libdw1000.o.d
    bin/dep/libdw1000Spi.o.d
    bin/dep/list.o.d
    bin/dep/log.o.d
    bin/dep/lps25h.o.d
    bin/dep/main.o.d
    bin/dep/maxsonar.o.d
    bin/dep/mem.o.d
    bin/dep/motors.o.d
    bin/dep/mpu6500.o.d
    bin/dep/num.o.d
    bin/dep/nvic.o.d
    bin/dep/ow_syslink.o.d
    bin/dep/param.o.d
    bin/dep/pid.o.d
    bin/dep/piezo.o.d
    bin/dep/platform_cf2.o.d
    bin/dep/platformservice.o.d
    bin/dep/pm_f405.o.d
    bin/dep/port.o.d
    bin/dep/position_controller_altitude.o.d
    bin/dep/position_estimator_altitude.o.d
    bin/dep/proximity.o.d
    bin/dep/queue.o.d
    bin/dep/queuemonitor.o.d
    bin/dep/radiolink.o.d
    bin/dep/readme.txt
    bin/dep/sensfusion6.o.d
    bin/dep/sitaw.o.d
    bin/dep/sound_cf2.o.d
    bin/dep/stabilizer.o.d
    bin/dep/stm32f4xx_adc.o.d
    bin/dep/stm32f4xx_dbgmcu.o.d
    bin/dep/stm32f4xx_dma.o.d
    bin/dep/stm32f4xx_exti.o.d
    bin/dep/stm32f4xx_flash.o.d
    bin/dep/stm32f4xx_gpio.o.d
    bin/dep/stm32f4xx_i2c.o.d
    bin/dep/stm32f4xx_iwdg.o.d
    bin/dep/stm32f4xx_misc.o.d
    bin/dep/stm32f4xx_rcc.o.d
    bin/dep/stm32f4xx_spi.o.d
    bin/dep/stm32f4xx_syscfg.o.d
    bin/dep/stm32f4xx_tim.o.d
    bin/dep/stm32f4xx_usart.o.d
    bin/dep/swd.o.d
    bin/dep/syslink.o.d
    bin/dep/system.o.d
    bin/dep/system_stm32f4xx.o.d
    bin/dep/tasks.o.d
    bin/dep/timers.o.d
    bin/dep/trigger.o.d
    bin/dep/uart1.o.d
    bin/dep/uart2.o.d
    bin/dep/uart_syslink.o.d
    bin/dep/usb.o.d
    bin/dep/usb_bsp.o.d
    bin/dep/usb_core.o.d
    bin/dep/usb_dcd.o.d
    bin/dep/usb_dcd_int.o.d
    bin/dep/usbd_core.o.d
    bin/dep/usbd_desc.o.d
    bin/dep/usbd_ioreq.o.d
    bin/dep/usbd_req.o.d
    bin/dep/usblink.o.d
    bin/dep/usec_time.o.d
    bin/dep/version.o.d
    bin/dep/watchdog.o.d
    bin/dep/worker.o.d
    bin/dep/ws2812_cf2.o.d
    bin/ak8963.o
    bin/altitude_hold.o
    bin/attitude_pid_controller.o
    bin/bigquad.o
    bin/buzzdeck.o
    bin/buzzer.o
    bin/cfassert.o
    bin/comm.o
    bin/commander.o
    bin/configblockeeprom.o
    bin/console.o
    bin/cpal_hal.o
    bin/cpal_i2c.o
    bin/cpal_i2c_hal_stm32f4xx.o
    bin/cpal_usercallback_template.o
    bin/cppm.o
    bin/cppmdeck.o
    bin/cpuid.o
    bin/crc.o
    bin/crtp.o
    bin/crtpservice.o
    bin/debug.o
    bin/deck.o
    bin/deck_analog.o
    bin/deck_constants.o
    bin/deck_digital.o
    bin/deck_drivers.o
    bin/deck_info.o
    bin/deck_spi.o
    bin/deck_test.o
    bin/dwm1000.o
    bin/eeprom.o
    bin/eprintf.o
    bin/exptest.o
    bin/exti.o
    bin/extrx.o
    bin/filter.o
    bin/FreeRTOS-openocd.o
    bin/freeRTOSdebug.o
    bin/gtgps.o
    bin/heap_4.o
    bin/i2cdev_f405.o
    bin/imu_cf2.o
    bin/led_f405.o
    bin/ledring12.o
    bin/ledseq.o
    bin/libdw1000.o
    bin/libdw1000Spi.o
    bin/list.o
    bin/log.o
    bin/lps25h.o
    bin/main.o
    bin/maxsonar.o
    bin/mem.o
    bin/motors.o
    bin/mpu6500.o
    bin/num.o
    bin/nvic.o
    bin/ow_syslink.o
    bin/param.o
    bin/pid.o
    bin/piezo.o
    bin/platform_cf2.o
    bin/platformservice.o
    bin/pm_f405.o
    bin/port.o
    bin/position_controller_altitude.o
    bin/position_estimator_altitude.o
    bin/proximity.o
    bin/queue.o
    bin/queuemonitor.o
    bin/radiolink.o
    bin/readme.txt
    bin/sensfusion6.o
    bin/sitaw.o
    bin/sound_cf2.o
    bin/stabilizer.o
    bin/startup_stm32f40xx.o
    bin/stm32f4xx_adc.o
    bin/stm32f4xx_dbgmcu.o
    bin/stm32f4xx_dma.o
    bin/stm32f4xx_exti.o
    bin/stm32f4xx_flash.o
    bin/stm32f4xx_gpio.o
    bin/stm32f4xx_i2c.o
    bin/stm32f4xx_iwdg.o
    bin/stm32f4xx_misc.o
    bin/stm32f4xx_rcc.o
    bin/stm32f4xx_spi.o
    bin/stm32f4xx_syscfg.o
    bin/stm32f4xx_tim.o
    bin/stm32f4xx_usart.o
    bin/swd.o
    bin/syslink.o
    bin/system.o
    bin/system_stm32f4xx.o
    bin/tasks.o
    bin/timers.o
    bin/trigger.o
    bin/uart1.o
    bin/uart2.o
    bin/uart_syslink.o
    bin/usb.o
    bin/usb_bsp.o
    bin/usb_core.o
    bin/usb_dcd.o
    bin/usb_dcd_int.o
    bin/usbd_core.o
    bin/usbd_desc.o
    bin/usbd_ioreq.o
    bin/usbd_req.o
    bin/usblink.o
    bin/usec_time.o
    bin/version.o
    bin/watchdog.o
    bin/worker.o
    bin/ws2812_cf2.o
    src/config/config.h
    src/config/FreeRTOSConfig.h
    src/config/nvicconf.h
    src/config/stm32f10x_conf.h
    src/config/stm32f40x_i2c_cpal_conf.h
    src/config/stm32f4xx_conf.h
    src/config/stm32fxxx.h
    src/config/trace.h
    src/deck/api/deck_analog.c
    src/deck/api/deck_constants.c
    src/deck/api/deck_digital.c
    src/deck/api/deck_spi.c
    src/deck/core/deck.c
    src/deck/core/deck_drivers.c
    src/deck/core/deck_info.c
    src/deck/core/deck_test.c
    src/deck/drivers/interface/ledring12.h
    src/deck/drivers/src/test/bigquadtest.c
    src/deck/drivers/src/test/exptest.c
    src/deck/drivers/src/bigquad.c
    src/deck/drivers/src/buzzdeck.c
    src/deck/drivers/src/cppmdeck.c
    src/deck/drivers/src/dwm1000.c
    src/deck/drivers/src/gtgps.c
    src/deck/drivers/src/ledring12.c
    src/deck/drivers/src/mac.h
    src/deck/interface/deck.h
    src/deck/interface/deck_analog.h
    src/deck/interface/deck_constants.h
    src/deck/interface/deck_core.h
    src/deck/interface/deck_digital.h
    src/deck/interface/deck_spi.h
    src/deck/interface/deck_test.h
    src/deck/readme
    src/drivers/interface/adc.h
    src/drivers/interface/ak8963.h
    src/drivers/interface/cppm.h
    src/drivers/interface/eeprom.h
    src/drivers/interface/exti.h
    src/drivers/interface/hmc5883l.h
    src/drivers/interface/i2cdev.h
    src/drivers/interface/i2croutines.h
    src/drivers/interface/led.h
    src/drivers/interface/lps25h.h
    src/drivers/interface/maxsonar.h
    src/drivers/interface/motors.h
    src/drivers/interface/mpu6050.h
    src/drivers/interface/mpu6500.h
    src/drivers/interface/ms5611.h
    src/drivers/interface/nrf24l01.h
    src/drivers/interface/nRF24L01reg.h
    src/drivers/interface/nvic.h
    src/drivers/interface/piezo.h
    src/drivers/interface/swd.h
    src/drivers/interface/uart1.h
    src/drivers/interface/uart2.h
    src/drivers/interface/uart_syslink.h
    src/drivers/interface/vl6180.h
    src/drivers/interface/watchdog.h
    src/drivers/interface/ws2812.h
    src/drivers/src/adc_f103.c
    src/drivers/src/ak8963.c
    src/drivers/src/cppm.c
    src/drivers/src/eeprom.c
    src/drivers/src/exti.c
    src/drivers/src/hmc5883l.c
    src/drivers/src/i2cdev_f103.c
    src/drivers/src/i2cdev_f405.c
    src/drivers/src/i2croutines.c
    src/drivers/src/led_f103.c
    src/drivers/src/led_f405.c
    src/drivers/src/lps25h.c
    src/drivers/src/maxsonar.c
    src/drivers/src/motors.c
    src/drivers/src/motors_def_cf1.c
    src/drivers/src/motors_def_cf2.c
    src/drivers/src/mpu6050.c
    src/drivers/src/mpu6500.c
    src/drivers/src/ms5611.c
    src/drivers/src/nrf24l01.c
    src/drivers/src/nvic.c
    src/drivers/src/piezo.c
    src/drivers/src/swd.c
    src/drivers/src/uart1.c
    src/drivers/src/uart2.c
    src/drivers/src/uart_syslink.c
    src/drivers/src/vl6180.c
    src/drivers/src/watchdog.c
    src/drivers/src/ws2812_cf2.c
    src/hal/interface/buzzer.h
    src/hal/interface/eskylink.h
    src/hal/interface/freeRTOSdebug.h
    src/hal/interface/imu.h
    src/hal/interface/imu_types.h
    src/hal/interface/ledseq.h
    src/hal/interface/nrf24link.h
    src/hal/interface/ow.h
    src/hal/interface/pm.h
    src/hal/interface/proximity.h
    src/hal/interface/radiolink.h
    src/hal/interface/syslink.h
    src/hal/interface/uart.h
    src/hal/interface/usb.h
    src/hal/interface/usb_conf.h
    src/hal/interface/usbd_conf.h
    src/hal/interface/usbd_desc.h
    src/hal/interface/usblink.h
    src/hal/interface/usec_time.h
    src/hal/src/buzzer.c
    src/hal/src/eskylink.c
    src/hal/src/freeRTOSdebug.c
    src/hal/src/imu_cf1.c
    src/hal/src/imu_cf2.c
    src/hal/src/ledseq.c
    src/hal/src/nrf24link.c
    src/hal/src/ow_none.c
    src/hal/src/ow_syslink.c
    src/hal/src/pm_f103.c
    src/hal/src/pm_f405.c
    src/hal/src/proximity.c
    src/hal/src/radiolink.c
    src/hal/src/syslink.c
    src/hal/src/uart.c
    src/hal/src/usb.c
    src/hal/src/usb_bsp.c
    src/hal/src/usbd_desc.c
    src/hal/src/usblink.c
    src/hal/src/usec_time.c
    src/init/main.c
    src/lib/CMSIS/Core/CM3/startup/arm/startup_stm32f10x_cl.s
    src/lib/CMSIS/Core/CM3/startup/arm/startup_stm32f10x_hd.s
    src/lib/CMSIS/Core/CM3/startup/arm/startup_stm32f10x_ld.s
    src/lib/CMSIS/Core/CM3/startup/arm/startup_stm32f10x_md.s
    src/lib/CMSIS/Core/CM3/startup/gcc/startup_stm32f10x_cl.s
    src/lib/CMSIS/Core/CM3/startup/gcc/startup_stm32f10x_hd.s
    src/lib/CMSIS/Core/CM3/startup/gcc/startup_stm32f10x_ld.s
    src/lib/CMSIS/Core/CM3/startup/gcc/startup_stm32f10x_md.s
    src/lib/CMSIS/Core/CM3/startup/iar/startup_stm32f10x_cl.s
    src/lib/CMSIS/Core/CM3/startup/iar/startup_stm32f10x_hd.s
    src/lib/CMSIS/Core/CM3/startup/iar/startup_stm32f10x_ld.s
    src/lib/CMSIS/Core/CM3/startup/iar/startup_stm32f10x_md.s
    src/lib/CMSIS/Core/CM3/core_cm3.c
    src/lib/CMSIS/Core/CM3/core_cm3.h
    src/lib/CMSIS/Core/CM3/stm32f10x.h
    src/lib/CMSIS/Core/CM3/system_stm32f10x.c
    src/lib/CMSIS/Core/CM3/system_stm32f10x.h
    src/lib/CMSIS/Core/Documentation/CMSIS_Core.htm
    src/lib/CMSIS/Include/arm_common_tables.h
    src/lib/CMSIS/Include/arm_math.h
    src/lib/CMSIS/Include/core_cm0.h
    src/lib/CMSIS/Include/core_cm3.h
    src/lib/CMSIS/Include/core_cm4.h
    src/lib/CMSIS/Include/core_cm4_simd.h
    src/lib/CMSIS/Include/core_cmFunc.h
    src/lib/CMSIS/Include/core_cmInstr.h
    src/lib/CMSIS/Include/core_sc000.h
    src/lib/CMSIS/Include/core_sc300.h
    src/lib/CMSIS/STM32F4xx/Include/stm32f4xx.h
    src/lib/CMSIS/STM32F4xx/Include/system_stm32f4xx.h
    src/lib/CMSIS/STM32F4xx/Source/startup_stm32f40xx.s
    src/lib/CMSIS/STM32F4xx/Source/system_stm32f4xx.c
    src/lib/CMSIS/STM32F4xx/Release_Notes.html
    src/lib/CMSIS/License.doc
    src/lib/FreeRTOS/include/croutine.h
    src/lib/FreeRTOS/include/deprecated_definitions.h
    src/lib/FreeRTOS/include/event_groups.h
    src/lib/FreeRTOS/include/FreeRTOS.h
    src/lib/FreeRTOS/include/list.h
    src/lib/FreeRTOS/include/mpu_wrappers.h
    src/lib/FreeRTOS/include/portable.h
    src/lib/FreeRTOS/include/projdefs.h
    src/lib/FreeRTOS/include/queue.h
    src/lib/FreeRTOS/include/semphr.h
    src/lib/FreeRTOS/include/StackMacros.h
    src/lib/FreeRTOS/include/task.h
    src/lib/FreeRTOS/include/timers.h
    src/lib/FreeRTOS/portable/GCC/ARM_CM3/port.c
    src/lib/FreeRTOS/portable/GCC/ARM_CM3/portmacro.h
    src/lib/FreeRTOS/portable/GCC/ARM_CM4F/port.c
    src/lib/FreeRTOS/portable/GCC/ARM_CM4F/portmacro.h
    src/lib/FreeRTOS/portable/MemMang/heap_1.c
    src/lib/FreeRTOS/portable/MemMang/heap_2.c
    src/lib/FreeRTOS/portable/MemMang/heap_3.c
    src/lib/FreeRTOS/portable/MemMang/heap_4.c
    src/lib/FreeRTOS/portable/MemMang/heap_5.c
    src/lib/FreeRTOS/croutine.c
    src/lib/FreeRTOS/event_groups.c
    src/lib/FreeRTOS/list.c
    src/lib/FreeRTOS/queue.c
    src/lib/FreeRTOS/tasks.c
    src/lib/FreeRTOS/timers.c
    src/lib/STM32_CPAL_Driver/devices/stm32f10x/cpal_i2c_hal_stm32f10x.c
    src/lib/STM32_CPAL_Driver/devices/stm32f10x/cpal_i2c_hal_stm32f10x.h
    src/lib/STM32_CPAL_Driver/devices/stm32f2xx/cpal_i2c_hal_stm32f2xx.c
    src/lib/STM32_CPAL_Driver/devices/stm32f2xx/cpal_i2c_hal_stm32f2xx.h
    src/lib/STM32_CPAL_Driver/devices/stm32f4xx/cpal_i2c_hal_stm32f4xx.c
    src/lib/STM32_CPAL_Driver/devices/stm32f4xx/cpal_i2c_hal_stm32f4xx.h
    src/lib/STM32_CPAL_Driver/devices/stm32l1xx/cpal_i2c_hal_stm32l1xx.c
    src/lib/STM32_CPAL_Driver/devices/stm32l1xx/cpal_i2c_hal_stm32l1xx.h
    src/lib/STM32_CPAL_Driver/inc/cpal.h
    src/lib/STM32_CPAL_Driver/inc/cpal_i2c.h
    src/lib/STM32_CPAL_Driver/src/cpal_hal.c
    src/lib/STM32_CPAL_Driver/src/cpal_i2c.c
    src/lib/STM32_CPAL_Driver/src/cpal_usercallback_template.c
    src/lib/STM32_CPAL_Driver/Release_Notes.html
    src/lib/STM32_USB_Device_Library/Core/inc/usbd_conf_template.h
    src/lib/STM32_USB_Device_Library/Core/inc/usbd_core.h
    src/lib/STM32_USB_Device_Library/Core/inc/usbd_def.h
    src/lib/STM32_USB_Device_Library/Core/inc/usbd_ioreq.h
    src/lib/STM32_USB_Device_Library/Core/inc/usbd_req.h
    src/lib/STM32_USB_Device_Library/Core/inc/usbd_usr.h
    src/lib/STM32_USB_Device_Library/Core/src/usbd_core.c
    src/lib/STM32_USB_Device_Library/Core/src/usbd_ioreq.c
    src/lib/STM32_USB_Device_Library/Core/src/usbd_req.c
    src/lib/STM32_USB_Device_Library/Release_Notes.html
    src/lib/STM32_USB_OTG_Driver/inc/usb_bsp.h
    src/lib/STM32_USB_OTG_Driver/inc/usb_conf_template.h
    src/lib/STM32_USB_OTG_Driver/inc/usb_core.h
    src/lib/STM32_USB_OTG_Driver/inc/usb_dcd.h
    src/lib/STM32_USB_OTG_Driver/inc/usb_dcd_int.h
    src/lib/STM32_USB_OTG_Driver/inc/usb_defines.h
    src/lib/STM32_USB_OTG_Driver/inc/usb_hcd.h
    src/lib/STM32_USB_OTG_Driver/inc/usb_hcd_int.h
    src/lib/STM32_USB_OTG_Driver/inc/usb_otg.h
    src/lib/STM32_USB_OTG_Driver/inc/usb_regs.h
    src/lib/STM32_USB_OTG_Driver/src/usb_bsp_template.c
    src/lib/STM32_USB_OTG_Driver/src/usb_core.c
    src/lib/STM32_USB_OTG_Driver/src/usb_dcd.c
    src/lib/STM32_USB_OTG_Driver/src/usb_dcd_int.c
    src/lib/STM32_USB_OTG_Driver/src/usb_hcd.c
    src/lib/STM32_USB_OTG_Driver/src/usb_hcd_int.c
    src/lib/STM32_USB_OTG_Driver/src/usb_otg.c
    src/lib/STM32_USB_OTG_Driver/Release_Notes.html
    src/lib/STM32F10x_StdPeriph_Driver/inc/misc.h
    src/lib/STM32F10x_StdPeriph_Driver/inc/stm32f10x_adc.h
    src/lib/STM32F10x_StdPeriph_Driver/inc/stm32f10x_bkp.h
    src/lib/STM32F10x_StdPeriph_Driver/inc/stm32f10x_can.h
    src/lib/STM32F10x_StdPeriph_Driver/inc/stm32f10x_crc.h
    src/lib/STM32F10x_StdPeriph_Driver/inc/stm32f10x_dac.h
    src/lib/STM32F10x_StdPeriph_Driver/inc/stm32f10x_dbgmcu.h
    src/lib/STM32F10x_StdPeriph_Driver/inc/stm32f10x_dma.h
    src/lib/STM32F10x_StdPeriph_Driver/inc/stm32f10x_exti.h
    src/lib/STM32F10x_StdPeriph_Driver/inc/stm32f10x_flash.h
    src/lib/STM32F10x_StdPeriph_Driver/inc/stm32f10x_fsmc.h
    src/lib/STM32F10x_StdPeriph_Driver/inc/stm32f10x_gpio.h
    src/lib/STM32F10x_StdPeriph_Driver/inc/stm32f10x_i2c.h
    src/lib/STM32F10x_StdPeriph_Driver/inc/stm32f10x_iwdg.h
    src/lib/STM32F10x_StdPeriph_Driver/inc/stm32f10x_pwr.h
    src/lib/STM32F10x_StdPeriph_Driver/inc/stm32f10x_rcc.h
    src/lib/STM32F10x_StdPeriph_Driver/inc/stm32f10x_rtc.h
    src/lib/STM32F10x_StdPeriph_Driver/inc/stm32f10x_sdio.h
    src/lib/STM32F10x_StdPeriph_Driver/inc/stm32f10x_spi.h
    src/lib/STM32F10x_StdPeriph_Driver/inc/stm32f10x_tim.h
    src/lib/STM32F10x_StdPeriph_Driver/inc/stm32f10x_usart.h
    src/lib/STM32F10x_StdPeriph_Driver/inc/stm32f10x_wwdg.h
    src/lib/STM32F10x_StdPeriph_Driver/src/misc.c
    src/lib/STM32F10x_StdPeriph_Driver/src/stm32f10x_adc.c
    src/lib/STM32F10x_StdPeriph_Driver/src/stm32f10x_bkp.c
    src/lib/STM32F10x_StdPeriph_Driver/src/stm32f10x_can.c
    src/lib/STM32F10x_StdPeriph_Driver/src/stm32f10x_crc.c
    src/lib/STM32F10x_StdPeriph_Driver/src/stm32f10x_dac.c
    src/lib/STM32F10x_StdPeriph_Driver/src/stm32f10x_dbgmcu.c
    src/lib/STM32F10x_StdPeriph_Driver/src/stm32f10x_dma.c
    src/lib/STM32F10x_StdPeriph_Driver/src/stm32f10x_exti.c
    src/lib/STM32F10x_StdPeriph_Driver/src/stm32f10x_flash.c
    src/lib/STM32F10x_StdPeriph_Driver/src/stm32f10x_fsmc.c
    src/lib/STM32F10x_StdPeriph_Driver/src/stm32f10x_gpio.c
    src/lib/STM32F10x_StdPeriph_Driver/src/stm32f10x_i2c.c
    src/lib/STM32F10x_StdPeriph_Driver/src/stm32f10x_iwdg.c
    src/lib/STM32F10x_StdPeriph_Driver/src/stm32f10x_pwr.c
    src/lib/STM32F10x_StdPeriph_Driver/src/stm32f10x_rcc.c
    src/lib/STM32F10x_StdPeriph_Driver/src/stm32f10x_rtc.c
    src/lib/STM32F10x_StdPeriph_Driver/src/stm32f10x_sdio.c
    src/lib/STM32F10x_StdPeriph_Driver/src/stm32f10x_spi.c
    src/lib/STM32F10x_StdPeriph_Driver/src/stm32f10x_tim.c
    src/lib/STM32F10x_StdPeriph_Driver/src/stm32f10x_usart.c
    src/lib/STM32F10x_StdPeriph_Driver/src/stm32f10x_wwdg.c
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_adc.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_can.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_crc.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_cryp.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_dac.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_dbgmcu.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_dcmi.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_dma.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_dma2d.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_exti.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_flash.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_fmc.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_fsmc.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_gpio.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_hash.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_i2c.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_iwdg.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_ltdc.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_misc.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_pwr.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_rcc.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_rng.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_rtc.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_sai.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_sdio.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_spi.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_syscfg.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_tim.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_usart.h
    src/lib/STM32F4xx_StdPeriph_Driver/inc/stm32f4xx_wwdg.h
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_adc.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_can.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_crc.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_cryp.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_cryp_aes.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_cryp_des.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_cryp_tdes.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_dac.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_dbgmcu.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_dcmi.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_dma.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_dma2d.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_exti.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_flash.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_fmc.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_fsmc.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_gpio.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_hash.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_hash_md5.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_hash_sha1.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_i2c.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_iwdg.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_ltdc.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_misc.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_pwr.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_rcc.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_rng.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_rtc.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_sai.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_sdio.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_spi.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_syscfg.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_tim.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_usart.c
    src/lib/STM32F4xx_StdPeriph_Driver/src/stm32f4xx_wwdg.c
    src/lib/STM32F4xx_StdPeriph_Driver/Release_Notes.html
    src/modules/interface/altitude_hold.h
    src/modules/interface/attitude_controller.h
    src/modules/interface/comm.h
    src/modules/interface/commander.h
    src/modules/interface/console.h
    src/modules/interface/crtp.h
    src/modules/interface/crtpservice.h
    src/modules/interface/custom_hover.h
    src/modules/interface/custom_pid.h
    src/modules/interface/extrx.h
    src/modules/interface/info.h
    src/modules/interface/log.h
    src/modules/interface/mem.h
    src/modules/interface/param.h
    src/modules/interface/pid.h
    src/modules/interface/pidctrl.h
    src/modules/interface/platformservice.h
    src/modules/interface/position_controller.h
    src/modules/interface/position_estimator.h
    src/modules/interface/queuemonitor.h
    src/modules/interface/sensfusion6.h
    src/modules/interface/sitaw.h
    src/modules/interface/sound.h
    src/modules/interface/stabilizer.h
    src/modules/interface/stabilizer_types.h
    src/modules/interface/system.h
    src/modules/interface/trigger.h
    src/modules/interface/worker.h
    src/modules/src/altitude_hold.c
    src/modules/src/attitude_pid_controller.c
    src/modules/src/comm.c
    src/modules/src/commander.c
    src/modules/src/console.c
    src/modules/src/crtp.c
    src/modules/src/crtpservice.c
    src/modules/src/custom_hover.c
    src/modules/src/custom_pid.c
    src/modules/src/extrx.c
    src/modules/src/info.c
    src/modules/src/log.c
    src/modules/src/mem.c
    src/modules/src/param.c
    src/modules/src/pid.c
    src/modules/src/pidctrl.c
    src/modules/src/platformservice.c
    src/modules/src/position_controller_altitude.c
    src/modules/src/position_estimator_altitude.c
    src/modules/src/queuemonitor.c
    src/modules/src/sensfusion6.c
    src/modules/src/sitaw.c
    src/modules/src/sound_cf1.c
    src/modules/src/sound_cf2.c
    src/modules/src/stabilizer.c
    src/modules/src/system.c
    src/modules/src/trigger.c
    src/modules/src/worker.c
    src/platform/cf1/platform_cf1.c
    src/platform/cf2/platform_cf2.c
    src/platform/platform.h
    src/utils/interface/cfassert.h
    src/utils/interface/configblock.h
    src/utils/interface/cpuid.h
    src/utils/interface/crc.h
    src/utils/interface/debug.h
    src/utils/interface/eprintf.h
    src/utils/interface/filter.h
    src/utils/interface/num.h
    src/utils/interface/version.h
    src/utils/src/abort.c
    src/utils/src/cfassert.c
    src/utils/src/configblockeeprom.c
    src/utils/src/configblockflash.c
    src/utils/src/cpuid.c
    src/utils/src/crc.c
    src/utils/src/debug.c
    src/utils/src/eprintf.c
    src/utils/src/filter.c
    src/utils/src/FreeRTOS-openocd.c
    src/utils/src/num.c
    src/utils/src/version.vtpl
    test/utils/src/TestNum.c
    tools/build/build
    tools/build/clean
    tools/build/compile
    tools/build/test
    tools/eclipse/InterruptsInEclipse
    tools/make/F103/linker/COMMON.ld
    tools/make/F103/linker/DEF.ld
    tools/make/F103/linker/DEF_CLOAD.ld
    tools/make/F103/linker/FLASH.ld
    tools/make/F103/linker/FLASH_CLOAD.ld
    tools/make/F103/linker/sections_FLASH.ld
    tools/make/F103/jtagkey.cfg
    tools/make/F103/st_obj.mk
    tools/make/F103/stm32f1x-rtos.cfg
    tools/make/F103/stm32f1x.cfg
    tools/make/F405/linker/COMMON.ld
    tools/make/F405/linker/DEF.ld
    tools/make/F405/linker/DEF_CLOAD.ld
    tools/make/F405/linker/FLASH.ld
    tools/make/F405/linker/FLASH_CLOAD.ld
    tools/make/F405/linker/sections_FLASH.ld
    tools/make/F405/st_obj.mk
    tools/make/F405/stm32f4discovery.cfg
    tools/make/F405/stm32f4x_stlink.cfg
    tools/make/check-for-submodules.py
    tools/make/config.mk.example
    tools/make/dfu-convert.py
    tools/make/targets.mk
    tools/make/versionTemplate.py
    tools/test/gcc.yml
    tools/test/rakefile_helper.rb
    tools/trace/decodeItm.py
    tools/trace/enable_trace.cfg
    vendor/cmock/config/production_environment.rb
    vendor/cmock/config/test_environment.rb
    "vendor/cmock/docs/CMock Summary.odt"
    "vendor/cmock/docs/CMock Summary.pdf"
    vendor/cmock/docs/CMock_Summary.md
    vendor/cmock/docs/license.txt
    vendor/cmock/examples/make_example/src/foo.c
    vendor/cmock/examples/make_example/src/foo.h
    vendor/cmock/examples/make_example/src/main.c
    vendor/cmock/examples/make_example/test/test_foo.c
    vendor/cmock/examples/make_example/test/test_main.c
    vendor/cmock/examples/make_example/Makefile
    vendor/cmock/examples/temp_sensor/src/AdcConductor.c
    vendor/cmock/examples/temp_sensor/src/AdcConductor.h
    vendor/cmock/examples/temp_sensor/src/AdcHardware.c
    vendor/cmock/examples/temp_sensor/src/AdcHardware.h
    vendor/cmock/examples/temp_sensor/src/AdcHardwareConfigurator.c
    vendor/cmock/examples/temp_sensor/src/AdcHardwareConfigurator.h
    vendor/cmock/examples/temp_sensor/src/AdcModel.c
    vendor/cmock/examples/temp_sensor/src/AdcModel.h
    vendor/cmock/examples/temp_sensor/src/AdcTemperatureSensor.c
    vendor/cmock/examples/temp_sensor/src/AdcTemperatureSensor.h
    vendor/cmock/examples/temp_sensor/src/AT91SAM7X256.h
    vendor/cmock/examples/temp_sensor/src/Executor.c
    vendor/cmock/examples/temp_sensor/src/Executor.h
    vendor/cmock/examples/temp_sensor/src/IntrinsicsWrapper.c
    vendor/cmock/examples/temp_sensor/src/IntrinsicsWrapper.h
    vendor/cmock/examples/temp_sensor/src/Main.c
    vendor/cmock/examples/temp_sensor/src/Main.h
    vendor/cmock/examples/temp_sensor/src/Model.c
    vendor/cmock/examples/temp_sensor/src/Model.h
    vendor/cmock/examples/temp_sensor/src/ModelConfig.h
    vendor/cmock/examples/temp_sensor/src/TaskScheduler.c
    vendor/cmock/examples/temp_sensor/src/TaskScheduler.h
    vendor/cmock/examples/temp_sensor/src/TemperatureCalculator.c
    vendor/cmock/examples/temp_sensor/src/TemperatureCalculator.h
    vendor/cmock/examples/temp_sensor/src/TemperatureFilter.c
    vendor/cmock/examples/temp_sensor/src/TemperatureFilter.h
    vendor/cmock/examples/temp_sensor/src/TimerConductor.c
    vendor/cmock/examples/temp_sensor/src/TimerConductor.h
    vendor/cmock/examples/temp_sensor/src/TimerConfigurator.c
    vendor/cmock/examples/temp_sensor/src/TimerConfigurator.h
    vendor/cmock/examples/temp_sensor/src/TimerHardware.c
    vendor/cmock/examples/temp_sensor/src/TimerHardware.h
    vendor/cmock/examples/temp_sensor/src/TimerInterruptConfigurator.c
    vendor/cmock/examples/temp_sensor/src/TimerInterruptConfigurator.h
    vendor/cmock/examples/temp_sensor/src/TimerInterruptHandler.c
    vendor/cmock/examples/temp_sensor/src/TimerInterruptHandler.h
    vendor/cmock/examples/temp_sensor/src/TimerModel.c
    vendor/cmock/examples/temp_sensor/src/TimerModel.h
    vendor/cmock/examples/temp_sensor/src/Types.h
    vendor/cmock/examples/temp_sensor/src/UsartBaudRateRegisterCalculator.c
    vendor/cmock/examples/temp_sensor/src/UsartBaudRateRegisterCalculator.h
    vendor/cmock/examples/temp_sensor/src/UsartConductor.c
    vendor/cmock/examples/temp_sensor/src/UsartConductor.h
    vendor/cmock/examples/temp_sensor/src/UsartConfigurator.c
    vendor/cmock/examples/temp_sensor/src/UsartConfigurator.h
    vendor/cmock/examples/temp_sensor/src/UsartHardware.c
    vendor/cmock/examples/temp_sensor/src/UsartHardware.h
    vendor/cmock/examples/temp_sensor/src/UsartModel.c
    vendor/cmock/examples/temp_sensor/src/UsartModel.h
    vendor/cmock/examples/temp_sensor/src/UsartPutChar.c
    vendor/cmock/examples/temp_sensor/src/UsartPutChar.h
    vendor/cmock/examples/temp_sensor/src/UsartTransmitBufferStatus.c
    vendor/cmock/examples/temp_sensor/src/UsartTransmitBufferStatus.h
    vendor/cmock/examples/temp_sensor/test/TestAdcConductor.c
    vendor/cmock/examples/temp_sensor/test/TestAdcHardware.c
    vendor/cmock/examples/temp_sensor/test/TestAdcHardwareConfigurator.c
    vendor/cmock/examples/temp_sensor/test/TestAdcModel.c
    vendor/cmock/examples/temp_sensor/test/TestAdcTemperatureSensor.c
    vendor/cmock/examples/temp_sensor/test/TestExecutor.c
    vendor/cmock/examples/temp_sensor/test/TestMain.c
    vendor/cmock/examples/temp_sensor/test/TestModel.c
    vendor/cmock/examples/temp_sensor/test/TestTaskScheduler.c
    vendor/cmock/examples/temp_sensor/test/TestTemperatureCalculator.c
    vendor/cmock/examples/temp_sensor/test/TestTemperatureFilter.c
    vendor/cmock/examples/temp_sensor/test/TestTimerConductor.c
    vendor/cmock/examples/temp_sensor/test/TestTimerConfigurator.c
    vendor/cmock/examples/temp_sensor/test/TestTimerHardware.c
    vendor/cmock/examples/temp_sensor/test/TestTimerInterruptConfigurator.c
    vendor/cmock/examples/temp_sensor/test/TestTimerInterruptHandler.c
    vendor/cmock/examples/temp_sensor/test/TestTimerModel.c
    vendor/cmock/examples/temp_sensor/test/TestUsartBaudRateRegisterCalculator.c
    vendor/cmock/examples/temp_sensor/test/TestUsartConductor.c
    vendor/cmock/examples/temp_sensor/test/TestUsartConfigurator.c
    vendor/cmock/examples/temp_sensor/test/TestUsartHardware.c
    vendor/cmock/examples/temp_sensor/test/TestUsartModel.c
    vendor/cmock/examples/temp_sensor/test/TestUsartPutChar.c
    vendor/cmock/examples/temp_sensor/test/TestUsartTransmitBufferStatus.c
    vendor/cmock/examples/temp_sensor/gcc.yml
    vendor/cmock/examples/temp_sensor/iar_v4.yml
    vendor/cmock/examples/temp_sensor/iar_v5.yml
    vendor/cmock/examples/temp_sensor/rakefile.rb
    vendor/cmock/examples/temp_sensor/rakefile_helper.rb
    vendor/cmock/iar/iar_v4/incIAR/AT91SAM7X-EK.h
    vendor/cmock/iar/iar_v4/incIAR/AT91SAM7X256.inc
    vendor/cmock/iar/iar_v4/incIAR/AT91SAM7X256.rdf
    vendor/cmock/iar/iar_v4/incIAR/AT91SAM7X256.tcl
    vendor/cmock/iar/iar_v4/incIAR/AT91SAM7X256_inc.h
    vendor/cmock/iar/iar_v4/incIAR/ioat91sam7x256.h
    vendor/cmock/iar/iar_v4/incIAR/lib_AT91SAM7X256.h
    vendor/cmock/iar/iar_v4/Resource/at91SAM7X256_FLASH.xcl
    vendor/cmock/iar/iar_v4/Resource/at91SAM7X256_RAM.xcl
    vendor/cmock/iar/iar_v4/Resource/ioat91sam7x256.ddf
    vendor/cmock/iar/iar_v4/Resource/SAM7_FLASH.mac
    vendor/cmock/iar/iar_v4/Resource/SAM7_RAM.mac
    vendor/cmock/iar/iar_v4/Resource/SAM7_SIM.mac
    vendor/cmock/iar/iar_v4/settings/cmock_demo.cspy.bat
    vendor/cmock/iar/iar_v4/settings/cmock_demo.dbgdt
    vendor/cmock/iar/iar_v4/settings/cmock_demo.dni
    vendor/cmock/iar/iar_v4/settings/cmock_demo.wsdt
    vendor/cmock/iar/iar_v4/srcIAR/Cstartup.s79
    vendor/cmock/iar/iar_v4/srcIAR/Cstartup_SAM7.c
    vendor/cmock/iar/iar_v4/cmock_demo.dep
    vendor/cmock/iar/iar_v4/cmock_demo.ewd
    vendor/cmock/iar/iar_v4/cmock_demo.ewp
    vendor/cmock/iar/iar_v4/cmock_demo.eww
    vendor/cmock/iar/iar_v5/incIAR/AT91SAM7X-EK.h
    vendor/cmock/iar/iar_v5/incIAR/AT91SAM7X256_inc.h
    vendor/cmock/iar/iar_v5/incIAR/lib_AT91SAM7X256.h
    vendor/cmock/iar/iar_v5/incIAR/project.h
    vendor/cmock/iar/iar_v5/Resource/at91SAM7X256_FLASH.icf
    vendor/cmock/iar/iar_v5/Resource/at91SAM7X256_RAM.icf
    vendor/cmock/iar/iar_v5/Resource/SAM7_FLASH.mac
    vendor/cmock/iar/iar_v5/Resource/SAM7_RAM.mac
    vendor/cmock/iar/iar_v5/Resource/SAM7_SIM.mac
    vendor/cmock/iar/iar_v5/settings/BasicInterrupt_SAM7X.cspy.bat
    vendor/cmock/iar/iar_v5/settings/BasicInterrupt_SAM7X.dbgdt
    vendor/cmock/iar/iar_v5/settings/BasicInterrupt_SAM7X.dni
    vendor/cmock/iar/iar_v5/settings/BasicInterrupt_SAM7X.wsdt
    vendor/cmock/iar/iar_v5/settings/BasicInterrupt_SAM7X_FLASH_Debug.jlink
    vendor/cmock/iar/iar_v5/settings/cmock_demo.cspy.bat
    vendor/cmock/iar/iar_v5/settings/cmock_demo.dbgdt
    vendor/cmock/iar/iar_v5/settings/cmock_demo.dni
    vendor/cmock/iar/iar_v5/settings/cmock_demo.wsdt
    vendor/cmock/iar/iar_v5/settings/cmock_demo_Binary.jlink
    vendor/cmock/iar/iar_v5/settings/cmock_demo_FLASH_Debug.jlink
    vendor/cmock/iar/iar_v5/settings/cmock_demo_RAM_Debug.jlink
    vendor/cmock/iar/iar_v5/srcIAR/Cstartup.s
    vendor/cmock/iar/iar_v5/srcIAR/Cstartup_SAM7.c
    vendor/cmock/iar/iar_v5/cmock_demo.dep
    vendor/cmock/iar/iar_v5/cmock_demo.ewd
    vendor/cmock/iar/iar_v5/cmock_demo.ewp
    vendor/cmock/iar/iar_v5/cmock_demo.eww
    vendor/cmock/lib/cmock.rb
    vendor/cmock/lib/cmock_config.rb
    vendor/cmock/lib/cmock_file_writer.rb
    vendor/cmock/lib/cmock_generator.rb
    vendor/cmock/lib/cmock_generator_plugin_array.rb
    vendor/cmock/lib/cmock_generator_plugin_callback.rb
    vendor/cmock/lib/cmock_generator_plugin_cexception.rb
    vendor/cmock/lib/cmock_generator_plugin_expect.rb
    vendor/cmock/lib/cmock_generator_plugin_expect_any_args.rb
    vendor/cmock/lib/cmock_generator_plugin_ignore.rb
    vendor/cmock/lib/cmock_generator_plugin_ignore_arg.rb
    vendor/cmock/lib/cmock_generator_plugin_return_thru_ptr.rb
    vendor/cmock/lib/cmock_generator_utils.rb
    vendor/cmock/lib/cmock_header_parser.rb
    vendor/cmock/lib/cmock_plugin_manager.rb
    vendor/cmock/lib/cmock_unityhelper_parser.rb
    vendor/cmock/release/build.info
    vendor/cmock/release/version.info
    vendor/cmock/scripts/create_makefile.rb
    vendor/cmock/scripts/create_mock.rb
    vendor/cmock/scripts/create_runner.rb
    vendor/cmock/scripts/test_summary.rb
    vendor/cmock/src/cmock.c
    vendor/cmock/src/cmock.h
    vendor/cmock/src/cmock_internals.h
    vendor/cmock/targets/clang_strict.yml
    vendor/cmock/targets/gcc.yml
    vendor/cmock/targets/gcc_64.yml
    vendor/cmock/targets/gcc_tiny.yml
    vendor/cmock/targets/iar_arm_v4.yml
    vendor/cmock/targets/iar_arm_v5.yml
    vendor/cmock/test/c/TestCMockC.c
    vendor/cmock/test/c/TestCMockC.yml
    vendor/cmock/test/c/TestCMockC_Runner.c
    vendor/cmock/test/c/TestCMockCDynamic.c
    vendor/cmock/test/c/TestCMockCDynamic.yml
    vendor/cmock/test/c/TestCMockCDynamic_Runner.c
    vendor/cmock/test/system/test_compilation/callingconv.h
    vendor/cmock/test/system/test_compilation/config.yml
    vendor/cmock/test/system/test_compilation/const.h
    vendor/cmock/test/system/test_compilation/osek.h
    vendor/cmock/test/system/test_compilation/parsing.h
    vendor/cmock/test/system/test_interactions/all_plugins_but_other_limits.yml
    vendor/cmock/test/system/test_interactions/all_plugins_coexist.yml
    vendor/cmock/test/system/test_interactions/array_and_pointer_handling.yml
    vendor/cmock/test/system/test_interactions/basic_expect_and_return.yml
    vendor/cmock/test/system/test_interactions/const_primitives_handling.yml
    vendor/cmock/test/system/test_interactions/doesnt_leave_details_behind.yml
    vendor/cmock/test/system/test_interactions/enforce_strict_ordering.yml
    vendor/cmock/test/system/test_interactions/expect_and_return_custom_types.yml
    vendor/cmock/test/system/test_interactions/expect_and_return_treat_as.yml
    vendor/cmock/test/system/test_interactions/expect_and_throw.yml
    vendor/cmock/test/system/test_interactions/expect_any_args.yml
    vendor/cmock/test/system/test_interactions/fancy_pointer_handling.yml
    vendor/cmock/test/system/test_interactions/function_pointer_handling.yml
    vendor/cmock/test/system/test_interactions/ignore_and_return.yml
    vendor/cmock/test/system/test_interactions/newer_standards_stuff1.yml
    vendor/cmock/test/system/test_interactions/nonstandard_parsed_stuff_1.yml
    vendor/cmock/test/system/test_interactions/nonstandard_parsed_stuff_2.yml
    vendor/cmock/test/system/test_interactions/out_of_memory.yml
    vendor/cmock/test/system/test_interactions/parsing_challenges.yml
    vendor/cmock/test/system/test_interactions/return_thru_ptr_and_expect_any_args.yml
    vendor/cmock/test/system/test_interactions/return_thru_ptr_ignore_arg.yml
    vendor/cmock/test/system/test_interactions/struct_union_enum_expect_and_return.yml
    vendor/cmock/test/system/test_interactions/struct_union_enum_expect_and_return_with_plugins.yml
    vendor/cmock/test/system/test_interactions/stubs_with_callbacks.yml
    vendor/cmock/test/system/test_interactions/unity_64bit_support.yml
    vendor/cmock/test/system/test_interactions/unity_ignores.yml
    vendor/cmock/test/system/systest_generator.rb
    vendor/cmock/test/unit/cmock_config_test.rb
    vendor/cmock/test/unit/cmock_config_test.yml
    vendor/cmock/test/unit/cmock_file_writer_test.rb
    vendor/cmock/test/unit/cmock_generator_main_test.rb
    vendor/cmock/test/unit/cmock_generator_plugin_array_test.rb
    vendor/cmock/test/unit/cmock_generator_plugin_callback_test.rb
    vendor/cmock/test/unit/cmock_generator_plugin_cexception_test.rb
    vendor/cmock/test/unit/cmock_generator_plugin_expect_a_test.rb
    vendor/cmock/test/unit/cmock_generator_plugin_expect_any_args_test.rb
    vendor/cmock/test/unit/cmock_generator_plugin_expect_b_test.rb
    vendor/cmock/test/unit/cmock_generator_plugin_ignore_arg_test.rb
    vendor/cmock/test/unit/cmock_generator_plugin_ignore_test.rb
    vendor/cmock/test/unit/cmock_generator_plugin_return_thru_ptr_test.rb
    vendor/cmock/test/unit/cmock_generator_utils_test.rb
    vendor/cmock/test/unit/cmock_header_parser_test.rb
    vendor/cmock/test/unit/cmock_plugin_manager_test.rb
    vendor/cmock/test/unit/cmock_unityhelper_parser_test.rb
    vendor/cmock/test/test_helper.rb
    vendor/cmock/vendor/behaviors/lib/behaviors/reporttask.rb
    vendor/cmock/vendor/behaviors/lib/behaviors.rb
    vendor/cmock/vendor/behaviors/test/tasks_test/lib/user.rb
    vendor/cmock/vendor/behaviors/test/tasks_test/test/user_test.rb
    vendor/cmock/vendor/behaviors/test/tasks_test/Rakefile
    vendor/cmock/vendor/behaviors/test/behaviors_tasks_test.rb
    vendor/cmock/vendor/behaviors/test/behaviors_test.rb
    vendor/cmock/vendor/behaviors/Manifest.txt
    vendor/cmock/vendor/behaviors/Rakefile
    vendor/cmock/Gemfile
    vendor/cmock/Rakefile
    vendor/cmock/rakefile_helper.rb
    vendor/cmock/README.md
    vendor/libdw1000/inc/dw1000.h
    vendor/libdw1000/inc/libdw1000.h
    vendor/libdw1000/inc/libdw1000Spi.h
    vendor/libdw1000/inc/libdw1000Types.h
    vendor/libdw1000/src/libdw1000.c
    vendor/libdw1000/src/libdw1000Spi.c
    vendor/libdw1000/test/dwTestOps.h
    vendor/libdw1000/test/TestLibdw1000.c
    vendor/libdw1000/test/TestLibdw1000Static.c
    vendor/libdw1000/test/TestSpiUtils.c
    vendor/libdw1000/tools/build/build
    vendor/libdw1000/tools/build/clean
    vendor/libdw1000/tools/build/compile
    vendor/libdw1000/tools/build/test
    vendor/libdw1000/tools/test/gcc.yml
    vendor/libdw1000/tools/test/rakefile_helper.rb
    vendor/libdw1000/tools/do
    vendor/libdw1000/LICENSE.md
    vendor/libdw1000/Makefile
    vendor/libdw1000/module.json
    vendor/libdw1000/Rakefile
    vendor/libdw1000/README.md
    vendor/unity/auto/colour_prompt.rb
    vendor/unity/auto/colour_reporter.rb
    vendor/unity/auto/generate_config.yml
    vendor/unity/auto/generate_module.rb
    vendor/unity/auto/generate_test_runner.rb
    vendor/unity/auto/parseOutput.rb
    vendor/unity/auto/stylize_as_junit.rb
    vendor/unity/auto/test_file_filter.rb
    vendor/unity/auto/type_sanitizer.rb
    vendor/unity/auto/unity_test_summary.py
    vendor/unity/auto/unity_test_summary.rb
    vendor/unity/docs/license.txt
    "vendor/unity/docs/Unity Summary.odt"
    "vendor/unity/docs/Unity Summary.pdf"
    "vendor/unity/docs/Unity Summary.txt"
    vendor/unity/examples/example_1/src/ProductionCode.c
    vendor/unity/examples/example_1/src/ProductionCode.h
    vendor/unity/examples/example_1/src/ProductionCode2.c
    vendor/unity/examples/example_1/src/ProductionCode2.h
    vendor/unity/examples/example_1/test/test_runners/TestProductionCode2_Runner.c
    vendor/unity/examples/example_1/test/test_runners/TestProductionCode_Runner.c
    vendor/unity/examples/example_1/test/TestProductionCode.c
    vendor/unity/examples/example_1/test/TestProductionCode2.c
    vendor/unity/examples/example_1/makefile
    vendor/unity/examples/example_1/readme.txt
    vendor/unity/examples/example_2/src/ProductionCode.c
    vendor/unity/examples/example_2/src/ProductionCode.h
    vendor/unity/examples/example_2/src/ProductionCode2.c
    vendor/unity/examples/example_2/src/ProductionCode2.h
    vendor/unity/examples/example_2/test/test_runners/all_tests.c
    vendor/unity/examples/example_2/test/test_runners/TestProductionCode2_Runner.c
    vendor/unity/examples/example_2/test/test_runners/TestProductionCode_Runner.c
    vendor/unity/examples/example_2/test/TestProductionCode.c
    vendor/unity/examples/example_2/test/TestProductionCode2.c
    vendor/unity/examples/example_2/makefile
    vendor/unity/examples/example_2/readme.txt
    vendor/unity/examples/example_3/helper/UnityHelper.c
    vendor/unity/examples/example_3/helper/UnityHelper.h
    vendor/unity/examples/example_3/src/ProductionCode.c
    vendor/unity/examples/example_3/src/ProductionCode.h
    vendor/unity/examples/example_3/src/ProductionCode2.c
    vendor/unity/examples/example_3/src/ProductionCode2.h
    vendor/unity/examples/example_3/test/TestProductionCode.c
    vendor/unity/examples/example_3/test/TestProductionCode2.c
    vendor/unity/examples/example_3/rakefile.rb
    vendor/unity/examples/example_3/rakefile_helper.rb
    vendor/unity/examples/example_3/readme.txt
    vendor/unity/examples/example_3/target_gcc_32.yml
    vendor/unity/extras/eclipse/error_parsers.txt
    vendor/unity/extras/fixture/src/unity_fixture.c
    vendor/unity/extras/fixture/src/unity_fixture.h
    vendor/unity/extras/fixture/src/unity_fixture_internals.h
    vendor/unity/extras/fixture/src/unity_fixture_malloc_overrides.h
    vendor/unity/extras/fixture/test/main/AllTests.c
    vendor/unity/extras/fixture/test/Makefile
    vendor/unity/extras/fixture/test/template_fixture_tests.c
    vendor/unity/extras/fixture/test/unity_fixture_Test.c
    vendor/unity/extras/fixture/test/unity_fixture_TestRunner.c
    vendor/unity/extras/fixture/test/unity_output_Spy.c
    vendor/unity/extras/fixture/test/unity_output_Spy.h
    vendor/unity/extras/fixture/rakefile.rb
    vendor/unity/extras/fixture/rakefile_helper.rb
    vendor/unity/extras/fixture/readme.txt
    vendor/unity/release/build.info
    vendor/unity/release/version.info
    vendor/unity/src/unity.c
    vendor/unity/src/unity.h
    vendor/unity/src/unity_internals.h
    vendor/unity/test/expectdata/testsample_cmd.c
    vendor/unity/test/expectdata/testsample_def.c
    vendor/unity/test/expectdata/testsample_head1.c
    vendor/unity/test/expectdata/testsample_head1.h
    vendor/unity/test/expectdata/testsample_mock_cmd.c
    vendor/unity/test/expectdata/testsample_mock_def.c
    vendor/unity/test/expectdata/testsample_mock_head1.c
    vendor/unity/test/expectdata/testsample_mock_head1.h
    vendor/unity/test/expectdata/testsample_mock_new1.c
    vendor/unity/test/expectdata/testsample_mock_new2.c
    vendor/unity/test/expectdata/testsample_mock_param.c
    vendor/unity/test/expectdata/testsample_mock_run1.c
    vendor/unity/test/expectdata/testsample_mock_run2.c
    vendor/unity/test/expectdata/testsample_mock_yaml.c
    vendor/unity/test/expectdata/testsample_new1.c
    vendor/unity/test/expectdata/testsample_new2.c
    vendor/unity/test/expectdata/testsample_param.c
    vendor/unity/test/expectdata/testsample_run1.c
    vendor/unity/test/expectdata/testsample_run2.c
    vendor/unity/test/expectdata/testsample_yaml.c
    vendor/unity/test/targets/clang_file.yml
    vendor/unity/test/targets/clang_strict.yml
    vendor/unity/test/targets/gcc_32.yml
    vendor/unity/test/targets/gcc_64.yml
    vendor/unity/test/targets/gcc_auto_limits.yml
    vendor/unity/test/targets/gcc_auto_sizeof.yml
    vendor/unity/test/targets/gcc_auto_stdint.yml
    vendor/unity/test/targets/gcc_manual_math.yml
    vendor/unity/test/targets/hitech_picc18.yml
    vendor/unity/test/targets/iar_arm_v4.yml
    vendor/unity/test/targets/iar_arm_v5.yml
    vendor/unity/test/targets/iar_arm_v5_3.yml
    vendor/unity/test/targets/iar_armcortex_LM3S9B92_v5_4.yml
    vendor/unity/test/targets/iar_cortexm3_v5.yml
    vendor/unity/test/targets/iar_msp430.yml
    vendor/unity/test/targets/iar_sh2a_v6.yml
    vendor/unity/test/testdata/mocksample.c
    vendor/unity/test/testdata/sample.yml
    vendor/unity/test/testdata/testsample.c
    vendor/unity/test/tests/test_generate_test_runner.rb
    vendor/unity/test/tests/testparameterized.c
    vendor/unity/test/tests/testunity.c
    vendor/unity/test/Makefile
    vendor/unity/test/rakefile
    vendor/unity/test/rakefile_helper.rb
    vendor/unity/README.md
    cf2.bin
    cf2.dfu
    cf2.elf
    cf2.hex
    cf2.map
    initcommit.txt
    LICENSE.txt
    Makefile
    module.json
    Rakefile
    README.md
    RELEASE_CHECKLIST.md)

add_executable(cf_firmware_rms ${SOURCE_FILES})